--- a/Thermory.Web/Views/Inventory/Audit.cshtml
+++ b/Thermory.Web/Views/Inventory/Audit.cshtml
@@ -17,7 +17,7 @@
             }
 }
     </ul>
-    <div class="tab-content" style="padding: 0; height: 500px; overflow-y: scroll;">
+    <div class="tab-content" style="padding: 0; height: 500px; overflow-y: auto;">
         @{
             foreach (var category in Model.LumberCategories)
             {
