--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -82,7 +82,7 @@
         }
         <li><a href="#orderTransactions" data-toggle="tab">Transactions</a></li>
     </ul>
-    <div class="tab-content" style="height: 500px; overflow-y: scroll;">
+    <div class="tab-content" style="height: 500px; overflow-y: auto;">
         <div id="orderDetails" class="tab-pane active" style="padding: 10px 0 10px 0;">
             <nav class="navbar navbar-default" style="padding: 0 10px 5px 10px; margin: 10px 0 10px 0;">
                 <table>
