--- a/Thermory.Web/Views/Catalog/Index.cshtml
+++ b/Thermory.Web/Views/Catalog/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Thermory.Domain.Models
 @model Thermory.Web.Models.CatalogModel
+@Scripts.Render("~/bundles/lumberTypeHistory")
 
 <div class="dropdown">
     <div class="dropdown-toggle btn btn-primary" type="button" id="categoryDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
