Tag #92 Updated Packaging Slip to Packing Slip. No database changes.

--- a/Thermory.Web/Views/SalesOrder/Index.cshtml
+++ b/Thermory.Web/Views/SalesOrder/Index.cshtml
@@ -35,7 +35,7 @@
                 { field: 'CustomerName', caption: 'Customer', type: 'text' },
                 { field: 'CreatedOn', caption: 'Created On', type: 'date' },
                 { field: 'CreatedBy', caption: 'Created By', type: 'text' },
-                { field: 'Status', caption: 'Status', type: 'list', options: { items: ['Sent to warehouse', 'Warehouse received', 'Pulled', 'Packaging slip created', 'Loaded', 'Deleted'] } }
+                { field: 'Status', caption: 'Status', type: 'list', options: { items: ['Sent to warehouse', 'Warehouse received', 'Pulled', 'Packing slip created', 'Loaded', 'Deleted'] } }
             ],
             columns: [
                 {
