#86 Added Lumber Category sort reordering. Need to refactor stored proecedure calling logic and allow selecting sort order when creating new catalog items.

--- a/Thermory.Web/Views/Account/Login.cshtml
+++ b/Thermory.Web/Views/Account/Login.cshtml
@@ -1,15 +1,11 @@
 ﻿@model Thermory.Web.Models.LoginModel
 
-@{
-    ViewBag.Title = "Log in";
-}
-
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h1>Log In</h1>
 </hgroup>
 
 <section>
-    @using (Html.BeginForm(new {ViewBag.ReturnUrl}))
+    @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true)
