--- a/Thermory.Web/Views/Catalog/Index.cshtml
+++ b/Thermory.Web/Views/Catalog/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Thermory.Domain.Models
+@using Thermory.Web.Models
 @model Thermory.Web.Models.CatalogModel
 
 <div class="dropdown">
@@ -26,7 +27,7 @@
     if (Model.LumberCategories.Any(c => c.Id == Model.SelectedCategoryId))
     {
         var category = Model.LumberCategories.SingleOrDefault(c => c.Id == Model.SelectedCategoryId);
-        @Html.Partial("_LumberCatalog", category)
+        @Html.Partial("_LumberCatalog", new LumberCategoryViewModel { Category = category, MaxSortOrder = Model.LumberCategories.Count })
     }
     else if (Model.MiscellaneousCategories.Any(c => c.Id == Model.SelectedCategoryId))
     {
